<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_color"
        app:showAsAction="collapseActionView"
        android:title="@string/color"/>

    <item
        android:id="@+id/menu_stroke_width"
        android:icon="@drawable/ic_stroke"
        app:showAsAction="collapseActionView"
        android:title="@string/stroke_width"/>

    <item
        android:id="@+id/menu_background_color"
        android:icon="@drawable/ic_color"
        app:showAsAction="collapseActionView"
        android:title="@string/background_color"/>

    <item
        android:id="@+id/menu_style_type"
        android:icon="@drawable/ic_color"
        app:showAsAction="collapseActionView"
        android:title="@string/fill"/>

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="collapseActionView"
        android:title="@string/save"/>

    <item
        android:id="@+id/menu_erase"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="collapseActionView"
        android:title="@string/erase"/>

    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="collapseActionView"
        android:title="@string/clear"/>
</menu>